# odoo-mcp-19

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  ONBOARDING.md  README.md  docker-compose.multiuser.yml  docker-compose.yml  pyproject.toml  run-docker.sh
docs/superpowers/plans/: 2026-05-05-safety-locked-mode.md
docs/superpowers/specs/: 2026-05-05-safety-locked-mode-design.md
src/odoo_mcp/: __init__.py  __main__.py  app.py  arg_mapping.py  auth_verifier.py  constants.py  models.py  module_knowledge.json  odoo_client.py  prompts.py  resources.py  safety.py  safety_profile.py  server.py  skill_prompts.py  skill_visibility.py  token_crypto.py  user_clients.py  users_db.py  utils.py
src/odoo_mcp/skills/: customer_360.md  inventory_watchdog.md  project_designer.md  quote.md  rma.md  serial_tracker.md  shipping_watchdog.md
tests/: conftest.py  test_arg_mapping.py  test_auth_verifier.py  test_fields_cache.py  test_main_bind_default.py  test_odoo_client.py  test_payload_validation.py  test_read_only_guard.py  test_resources.py  test_safety.py  test_safety_profile.py  test_safety_role.py  test_server_status_resource.py  test_side_effect_predicate.py  test_skill_prompts.py  test_skill_visibility.py  test_token_crypto.py  test_token_gate.py  test_user_clients.py  test_write_allowlist.py
tests/live/: test_locked_mode_live.py  test_safety_live.py  test_v1110_live.py
