[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "odoo-mcp-19"
version = "1.14.0"
description = "MCP Server for Odoo 19+ with v2 JSON-2 API Support"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
keywords = ["odoo", "odoo 19", "mcp", "mcp server", "v2 api", "json-2", "claude"]
authors = [
    {name = "Alan Ogic", email = "info@alanogic.com"}
]

dependencies = [
    "fastmcp[tasks]>=3.2.0",
    "requests>=2.32.4",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/AlanOgic/odoo-mcp-19"
Issues = "https://github.com/AlanOgic/odoo-mcp-19/issues"

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.10",
    "ruff>=0.4",
    "build",
    "twine",
    "pytest>=7.0",
]

[project.scripts]
odoo-mcp-19 = "odoo_mcp.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["odoo_mcp"]

[tool.setuptools.package-data]
odoo_mcp = ["*.json", "assets/*.svg"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
